--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>18:42</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -27,12 +27,25 @@
         If you have a Kakao Acount, log in with your email or phone number.
       </p>
     </header>
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input
+        name="username"
+        type="text"
+        placeholder="Email or phone number"
+        required
+      />
+      <input
+        name="password"
+        type="password"
+        placeholder="Password"
+        required
+        minlength="8"
+      />
       <input type="submit" value="log In" />
+      <input type="submit" value="Create Account" />
       <a href="#">Find Cocoa Account or Password</a>
     </form>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
