--- a/chats.html
+++ b/chats.html
@@ -32,21 +32,21 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="./images/profile.jpg" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Moko</h4>
-            <h6 class="user-component__subTitle">
-              Please check My Kokoa Account info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="./images/aa.PNG" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">YouFlower</h4>
+              <h6 class="user-component__subTitle">I Love you, too!</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
@@ -75,6 +75,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>너의 화면이 너무 크다TT</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
