--- a/friends.html
+++ b/friends.html
@@ -100,6 +100,12 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+    <div id="no-mobile">
+      <span>너의 화면이 너무 크다TT</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
