--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       <input type="submit" value="Create Account" />
       <a href="#">Find Cocoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>너의 화면이 너무 크다TT</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
